[project]
name = "api"
version = "0.1.0"
description = "FastAPI RESTful API"
dependencies = [
    "fastapi[standard]",
    "pydantic==<VERSION_ESTABLE_DE_PYDANTIC>",
    "python-dotenv==<VERSION_ESTABLE_DE_PYTHON_DOTENV>",
    "supabase==<VERSION_ESTABLE_DE_SUPABASE>"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.fastapi]
entrypoint = "main:app"
