[project]
name = "api"
version = "0.1.0"
description = "FastAPI RESTful API"
dependencies = [
    "fastapi[standard]",
    "requests",
    "pydantic",
    "python-dotenv",
    "supabase"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.fastapi]
entrypoint = "main:app"
